fix: add exchange goods
